aligned with banking use case, llm models and embeddings

--- a/python/L1_fast_agent.ipynb
+++ b/python/L1_fast_agent.ipynb
@@ -16,7 +16,10 @@
    "cell_type": "markdown",
    "id": "b0915e23-8230-4f65-9db6-4d60e9970021",
    "metadata": {
-    "id": "b0915e23-8230-4f65-9db6-4d60e9970021"
+    "id": "b0915e23-8230-4f65-9db6-4d60e9970021",
+    "slideshow": {
+     "slide_type": "notes"
+    }
    },
    "source": [
     "## Setup"
