--- a/python/LCEL_Lab.ipynb
+++ b/python/LCEL_Lab.ipynb
@@ -22,7 +22,7 @@
     "from dotenv import load_dotenv\n",
     "from env_utils import doublecheck_env, doublecheck_pkgs\n",
     "\n",
-    "load_dotenv()\n",
+    "load_dotenv(override=True)\n",
     "\n",
     "# os.environ[\"GROQ_API_KEY\"] = \"your_api_key_here\"\n",
     "# Check and print results\n",
@@ -202,7 +202,7 @@
     "from langchain_community.document_loaders import PyPDFLoader\n",
     "from langchain_community.vectorstores import Chroma\n",
     "#from langchain_openai import OpenAIEmbeddings\n",
-    "from langchain_community.embeddings import HuggingFaceBgeEmbeddings\n",
+    "from langchain_ollama import OllamaEmbeddings\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "#from pydantic import SecretStr\n",
     "\n",
@@ -228,7 +228,7 @@
     "# 2. Embed and store the document chunks (using in-memory Chroma for simplicity)\n",
     "#embeddings = OpenAIEmbeddings()\n",
     "\n",
-    "embeddings = HuggingFaceBgeEmbeddings(encode_kwargs={'normalize_embeddings': True},model_name=\"BAAI/bge-m3\")\n",
+    "embeddings = OllamaEmbeddings(model=\"all-minilm\")\n",
     "vectorstore = Chroma.from_documents(documents=splits, embedding=embeddings)\n",
     "retriever = vectorstore.as_retriever()\n",
     "\n",
