included google embedding model support

--- a/python/L10_LCEL_Lab.ipynb
+++ b/python/L10_LCEL_Lab.ipynb
@@ -12,11 +12,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "_KbW8Y5-XwA2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GROQ_API_KEY=****fKCN\n",
+      "GOOGLE_API_KEY=****te7k\n",
+      "LANGSMITH_API_KEY=****675a\n",
+      "LANGSMITH_TRACING=true\n",
+      "LANGSMITH_PROJECT=****ning\n",
+      "Python 3.12.1 satisfies requires-python: >=3.11,<3.14\n",
+      "package                | required | installed | status    | path                                                                     \n",
+      "---------------------- | -------- | --------- | --------- | -------------------------------------------------------------------------\n",
+      "langgraph              | >=1.0.0  | 1.0.3     | ✅ OK      | /workspaces/lca-langchainV1-essentials/.venv/lib/python3.12/site-packages\n",
+      "langchain              | >=1.0.0  | 1.0.8     | ✅ OK      | /workspaces/lca-langchainV1-essentials/.venv/lib/python3.12/site-packages\n",
+      "langchain-core         | >=1.0.0  | 1.1.0     | ✅ OK      | /workspaces/lca-langchainV1-essentials/.venv/lib/python3.12/site-packages\n",
+      "langchain-openai       | >=1.0.0  | -         | ❌ Missing | -                                                                        \n",
+      "langchain-anthropic    | >=1.0.0  | 1.1.0     | ✅ OK      | /workspaces/lca-langchainV1-essentials/.venv/lib/python3.12/site-packages\n",
+      "langchain-community    | >=0.4    | 0.4.1     | ✅ OK      | /workspaces/lca-langchainV1-essentials/.venv/lib/python3.12/site-packages\n",
+      "jupyter                | >=1.0.0  | 1.1.1     | ✅ OK      | /workspaces/lca-langchainV1-essentials/.venv/lib/python3.12/site-packages\n",
+      "langgraph-cli          | >=0.4.0  | 0.4.7     | ✅ OK      | /workspaces/lca-langchainV1-essentials/.venv/lib/python3.12/site-packages\n",
+      "langchain-mcp-adapters | (any)    | 0.1.13    | ✅ OK      | /workspaces/lca-langchainV1-essentials/.venv/lib/python3.12/site-packages\n",
+      "\n",
+      "Issues detected:\n",
+      "- langchain-openai: ❌ Missing (required >=1.0.0, installed -, path -)\n",
+      "\n",
+      "Environment:\n",
+      "- Executable: /workspaces/lca-langchainV1-essentials/.venv/bin/python\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -193,19 +223,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "szV3dJbfZEQa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question: What is the procedure for a customer to unfreeze their account?\n",
+      "Answer: According to the Internal Banking Policy on Account Freezing, to unfreeze an account, the customer must visit a branch with two forms of valid ID and proof of transaction legitimacy.\n",
+      "\n",
+      "Question: What is the bank's stock price today?\n",
+      "Answer: The information is unavailable. The provided internal policy context does not contain any information about the bank's stock price.\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.document_loaders import PyPDFLoader\n",
     "from langchain_community.vectorstores import Chroma\n",
     "#from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "from langchain_google_genai import GoogleGenerativeAIEmbeddings\n",
     "from langchain_ollama import OllamaEmbeddings\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "#from pydantic import SecretStr\n",
     "\n",
+    "from langchain_groq import ChatGroq\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "\n",
+    "# Initialize the model\n",
+    "llm = ChatGroq(model=\"llama-3.1-8b-instant\", temperature=0)\n",
+    "output_parser = StrOutputParser()\n",
     "# 1. Load a dummy banking policy document (replace with real PDF path)\n",
     "# A dummy text is used here for demonstration.\n",
     "# In a real case, load an actual PDF file, e.g., 'internal_banking_policy.pdf'\n",
@@ -228,7 +279,8 @@
     "# 2. Embed and store the document chunks (using in-memory Chroma for simplicity)\n",
     "#embeddings = OpenAIEmbeddings()\n",
     "\n",
-    "embeddings = OllamaEmbeddings(model=\"all-minilm\")\n",
+    "#embeddings = OllamaEmbeddings(model=\"all-minilm\")\n",
+    "embeddings = GoogleGenerativeAIEmbeddings(model=\"gemini-embedding-001\")\n",
     "vectorstore = Chroma.from_documents(documents=splits, embedding=embeddings)\n",
     "retriever = vectorstore.as_retriever()\n",
     "\n",
